Google tracking code in router. Fix for big numbers overlap in table.

--- a/app/styles/ui-controls/_ajax-spinner.scss
+++ b/app/styles/ui-controls/_ajax-spinner.scss
@@ -6,14 +6,5 @@
 	background-color: white;
 	height: 100%;
 	position: absolute;
-	opacity: 0.7;
+	@include opacity(70);
 }
-/*
- .spinner {
- width: 38px;
- height: 38px;
- margin-top: 50px;
- margin-left: auto;
- margin-right: auto;
- }
- */
